# Pesticide

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-24-pesticide-implementation.md  2026-02-24-pesticide-tui-design.md  2026-02-25-neovim-plugin-design.md
src/: app.rs  main.rs  watcher.rs
src/pest/: coverage.rs  discovery.rs  mod.rs  runner.rs
src/tree/: node.rs
src/ui/: coverage_source.rs  coverage_table.rs  coverage_tree.rs  footer.rs  mod.rs  output.rs  tree.rs
