[package]
name = "pesticide"
version = "0.1.0"
edition = "2021"
description = "A TUI for running Pest PHP tests in Laravel projects"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
roxmltree = "0.20"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
